--- a/index.html
+++ b/index.html
@@ -22,9 +22,23 @@
             </div>
         </div>
     </nav>
+    <div class="parallax-container">
+            <div class="parallax"> <img src="assets/bg.jpeg" alt="bg" class="background" ></div>
+          </div>
+          <div class="section white">
+            <div class="row container">
+              <h2 class="header">Campus Life</h2>
+              <p class="grey-text text-darken-3 lighten-3">A thriving community of creative and accomplished people from around the world</p>
+            </div>
+          </div>
+          <!-- <div class="parallax-container">
+            <div class="parallax"><img src="images/parallax2.jpg"></div>
+          </div>
+    -->
 
-    <img src="assets/bg.jpeg" alt="bg" >
+        <div style="height: 1000px">
 
+        </div>
 
 
 
@@ -37,6 +51,9 @@
 
     <!--Initializing JavaScript Components-->
     <script>
+        //Parallax Effect
+        const parallax = document.querySelectorAll('.parallax');
+        M.Parallax.init(parallax, {});
     </script>
 </body>
 
