--- a/index.html
+++ b/index.html
@@ -23,18 +23,24 @@
                     <i class="material-icons">menu</i>
                 </a>
                 <ul class="right hide-on-med-and-down">
-                    <li><a href="">About</a></li>
-                    <li><a href="">Academic</a></li>
-                    <li><a href="">Research</a></li>
-                    <li><a href="">Training & Collaborations</a></li>
-                    <li><a href="">Happenings</a></li>
+                    <li><a href="">About us</a></li>
+                    <li><a href="">Leadership</a></li>
+                    <li><a href="">Academics</a></li>
+                    <li><a href="">Research & Innovation</a></li>
+                    <li><a href="">Training & Placement</a></li>
+                    <li><a href="">Beyond Academics</a></li>
+                    <li><a href="">Latest Happenings</a></li>
+                    <li><a href="">Alumni</a></li>
                 </ul>
                 <ul class="sidenav grey lighten-2" id="mobile-menu">
-                    <li><a href="">About</a></li>
-                    <li><a href="">Academic</a></li>
-                    <li><a href="">Research</a></li>
-                    <li><a href="">Training & Collaborations</a></li>
-                    <li><a href="">Happenings</a></li>
+                    <li><a href="">About us</a></li>
+                    <li><a href="">Leadership</a></li>
+                    <li><a href="">Academics</a></li>
+                    <li><a href="">Research & Innovation</a></li>
+                    <li><a href="">Training & Placement</a></li>
+                    <li><a href="">Beyond Academics</a></li>
+                    <li><a href="">Latest Happenings</a></li>
+                    <li><a href="">Alumni</a></li>
                 </ul>
             </div>
         </nav>
