--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header>
         <nav class="nav-wrapper transparent">
             <div class="container">
-                <a href="" class="brand-logo">AIIT</a>
+                <a href="" class="brand-logo">ASET</a>
                 <a href="" class="sidenav-trigger" data-target="mobile-menu">
                     <i class="material-icons">menu</i>
                 </a>
