--- a/index.html
+++ b/index.html
@@ -8,21 +8,31 @@
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
 
     <!--Importing Custom CSS-->
-    <link type="text/css" rel="stylesheet" href="css/Style.css" media="screen,projection" />
+    <link type="text/css" rel="stylesheet" href="css/style.css" media="screen,projection" />
 
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 
 <body>
-    <header>
+    <header class="hero-wrap">
+            <div class="overlay"></div>
+        
         <nav class="nav-wrapper transparent">
             <div class="container">
-                <a href="" class="brand-logo">AIIT</a>
+                <div class="overlay"></div>
+                <img src="assets/amity_logo.png" alt="logo" class="logo">
+                <a href="" class="brand-logo center header-font">Amity Institute of Infromation Technology</a>
+
+            </div>
+        <!-- </nav> -->
+        
+        <nav class="nav-wrapper transparent second-nav">
+            <div class="container">
                 <a href="" class="sidenav-trigger" data-target="mobile-menu">
                     <i class="material-icons">menu</i>
                 </a>
-                <ul class="right hide-on-med-and-down">
+                <ul class="right hide-on-med-and-down zindex">
                     <li><a href="">About us</a></li>
                     <li><a href="">Leadership</a></li>
                     <li><a href="">Academics</a></li>
