--- a/index.html
+++ b/index.html
@@ -15,45 +15,49 @@
 </head>
 
 <body>
-    <header class="hero-wrap">
-            <div class="overlay"></div>
-        
-        <nav class="nav-wrapper transparent">
-            <div class="container">
-                <div class="overlay"></div>
-                <img src="assets/amity_logo.png" alt="logo" class="logo">
-                <a href="" class="brand-logo center header-font">Amity Institute of Infromation Technology</a>
+    <header>
+        <div class="container">
+            <div class="hide-on-small-only center">
+                <img src="assets/aiit-logo.png" alt="logo" class="logo">
+            </div>
+            <div class="hide-on-large-only">
+                <img src="assets/aiit-logo-m.png" alt="logo" class="logo ">
+            </div>
+        </div>
 
-            </div>
-        <!-- </nav> -->
-        
-        <nav class="nav-wrapper transparent second-nav">
-            <div class="container">
-                <a href="" class="sidenav-trigger" data-target="mobile-menu">
-                    <i class="material-icons">menu</i>
-                </a>
-                <ul class="right hide-on-med-and-down zindex">
-                    <li><a href="">About us</a></li>
-                    <li><a href="">Leadership</a></li>
-                    <li><a href="">Academics</a></li>
-                    <li><a href="">Research & Innovation</a></li>
-                    <li><a href="">Training & Placement</a></li>
-                    <li><a href="">Beyond Academics</a></li>
-                    <li><a href="">Latest Happenings</a></li>
-                    <li><a href="">Alumni</a></li>
-                </ul>
-                <ul class="sidenav grey lighten-2" id="mobile-menu">
-                    <li><a href="">About us</a></li>
-                    <li><a href="">Leadership</a></li>
-                    <li><a href="">Academics</a></li>
-                    <li><a href="">Research & Innovation</a></li>
-                    <li><a href="">Training & Placement</a></li>
-                    <li><a href="">Beyond Academics</a></li>
-                    <li><a href="">Latest Happenings</a></li>
-                    <li><a href="">Alumni</a></li>
-                </ul>
-            </div>
-        </nav>
+
+        <!--Navbar Fixed-->
+        <div class="navbar-fixed">
+            <!-- </nav> -->
+
+            <nav class="nav-wrapper transparent">
+                <div class="container">
+                    <a href="" class="sidenav-trigger" data-target="mobile-menu">
+                        <i class="material-icons">menu</i>
+                    </a>
+                    <ul class="right hide-on-med-and-down">
+                        <li><a href="">About us</a></li>
+                        <li><a href="">Leadership</a></li>
+                        <li><a href="">Academics</a></li>
+                        <li><a href="">Research & Innovation</a></li>
+                        <li><a href="">Training & Placement</a></li>
+                        <li><a href="">Beyond Academics</a></li>
+                        <li><a href="">Latest Happenings</a></li>
+                        <li><a href="">Alumni</a></li>
+                    </ul>
+                    <ul class="sidenav grey lighten-2" id="mobile-menu">
+                        <li><a href="">About us</a></li>
+                        <li><a href="">Leadership</a></li>
+                        <li><a href="">Academics</a></li>
+                        <li><a href="">Research & Innovation</a></li>
+                        <li><a href="">Training & Placement</a></li>
+                        <li><a href="">Beyond Academics</a></li>
+                        <li><a href="">Latest Happenings</a></li>
+                        <li><a href="">Alumni</a></li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
     </header>
 
 
