--- a/index.html
+++ b/index.html
@@ -16,22 +16,19 @@
 
 <body>
     <header>
-        <div class="container">
-            <div class="hide-on-small-only center">
-                <img src="assets/aiit-logo.png" alt="logo" class="logo">
-            </div>
-            <div class="hide-on-large-only">
-                <img src="assets/aiit-logo-m.png" alt="logo" class="logo ">
-            </div>
-        </div>
-
-
         <!--Navbar Fixed-->
+
         <div class="navbar-fixed">
             <!-- </nav> -->
 
             <nav class="nav-wrapper transparent">
                 <div class="container">
+                    <div class="hide-on-small-only center logo-div">
+                        <img src="assets/aiit-logo.png" alt="logo" class="logo">
+                    </div>
+                    <div class="hide-on-large-only">
+                        <img src="assets/aiit-logo-m.png" alt="logo" class="logo ">
+                    </div>
                     <a href="" class="sidenav-trigger" data-target="mobile-menu">
                         <i class="material-icons">menu</i>
                     </a>
@@ -59,10 +56,67 @@
             </nav>
         </div>
     </header>
+<div class="blue-background">
 
 
+    <div class="container">
+        <h2>Explore AIIT</h2>
+        <div>
+            <div class="row">
+                <div class="col s4">
+                    <div class="card">
+                        <div class="card-image">
+                            <img src="assets/about.jpg">
+                            <span class="card-title">About Amity</span>
+                        </div>
+                        <div class="card-content">
+                            <p>I am a very simple card. I am good at containing small bits of information.
+                                I am convenient because I require little markup to use effectively.</p>
+                        </div>
+                        <div class="card-action">
+                            <a href="#">This is a link</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col s4">
+                    <div class="card">
+                        <div class="card-image">
+                            <img src="assets/why-aiit.jpeg">
+                            <span class="card-title">Why AIIT?</span>
+                        </div>
+                        <div class="card-content">
+                            <p>I am a very simple card. I am good at containing small bits of information.
+                                I am convenient because I require little markup to use effectively.</p>
+                        </div>
+                        <div class="card-action">
+                            <a href="#">Read More</a>
+                        </div>
+                    </div>
+                </div>
 
 
+                <div class="col s4">
+                    <div class="card">
+                        <div class="card-image">
+                            <img src="assets/awards.jpg">
+                            <span class="card-title">Awards</span>
+                        </div>
+                        <div class="card-content">
+                            <p>I am a very simple card. I am good at containing small bits of information.
+                                I am convenient because I require little markup to use effectively.</p>
+                        </div>
+                        <div class="card-action">
+                            <a href="#">Read More </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+</div>
 
 
 
