--- a/index.html
+++ b/index.html
@@ -15,111 +15,30 @@
 </head>
 
 <body>
-    <header>
-        <!--Navbar Fixed-->
 
-        <div class="navbar-fixed">
-            <!-- </nav> -->
-
-            <nav class="nav-wrapper transparent">
-                <div class="container">
-                    <div class="hide-on-small-only center logo-div">
-                        <img src="assets/aiit-logo.png" alt="logo" class="logo">
-                    </div>
-                    <div class="hide-on-large-only">
-                        <img src="assets/aiit-logo-m.png" alt="logo" class="logo ">
-                    </div>
-                    <a href="" class="sidenav-trigger" data-target="mobile-menu">
-                        <i class="material-icons">menu</i>
-                    </a>
-                    <ul class="right hide-on-med-and-down">
-                        <li><a href="">About us</a></li>
-                        <li><a href="">Leadership</a></li>
-                        <li><a href="">Academics</a></li>
-                        <li><a href="">Research & Innovation</a></li>
-                        <li><a href="">Training & Placement</a></li>
-                        <li><a href="">Beyond Academics</a></li>
-                        <li><a href="">Latest Happenings</a></li>
-                        <li><a href="">Alumni</a></li>
-                    </ul>
-                    <ul class="sidenav grey lighten-2" id="mobile-menu">
-                        <li><a href="">About us</a></li>
-                        <li><a href="">Leadership</a></li>
-                        <li><a href="">Academics</a></li>
-                        <li><a href="">Research & Innovation</a></li>
-                        <li><a href="">Training & Placement</a></li>
-                        <li><a href="">Beyond Academics</a></li>
-                        <li><a href="">Latest Happenings</a></li>
-                        <li><a href="">Alumni</a></li>
-                    </ul>
-                </div>
-            </nav>
+    <div class="navbar-fixed">
+        <div class="center logo-div">
+            <img src="assets/aiit-logo.png" alt="logo" class="logo">
         </div>
-    </header>
-<div class="blue-background">
-
-
-    <div class="container">
-        <h2>Explore AIIT</h2>
-        <div>
-            <div class="row">
-                <div class="col s4">
-                    <div class="card">
-                        <div class="card-image">
-                            <img src="assets/about.jpg">
-                            <span class="card-title">About Amity</span>
-                        </div>
-                        <div class="card-content">
-                            <p>I am a very simple card. I am good at containing small bits of information.
-                                I am convenient because I require little markup to use effectively.</p>
-                        </div>
-                        <div class="card-action">
-                            <a href="#">This is a link</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col s4">
-                    <div class="card">
-                        <div class="card-image">
-                            <img src="assets/why-aiit.jpeg">
-                            <span class="card-title">Why AIIT?</span>
-                        </div>
-                        <div class="card-content">
-                            <p>I am a very simple card. I am good at containing small bits of information.
-                                I am convenient because I require little markup to use effectively.</p>
-                        </div>
-                        <div class="card-action">
-                            <a href="#">Read More</a>
-                        </div>
-                    </div>
-                </div>
-
-
-                <div class="col s4">
-                    <div class="card">
-                        <div class="card-image">
-                            <img src="assets/awards.jpg">
-                            <span class="card-title">Awards</span>
-                        </div>
-                        <div class="card-content">
-                            <p>I am a very simple card. I am good at containing small bits of information.
-                                I am convenient because I require little markup to use effectively.</p>
-                        </div>
-                        <div class="card-action">
-                            <a href="#">Read More </a>
-                        </div>
-                    </div>
+        <nav>
+            <div class="nav-wrapper blue-bg">
+                <div class="container">
+                    <ul class="left hide-on-med-and-down">
+                        <li><a href="sass.html">Sass</a></li>
+                        <li><a href="badges.html">Components</a></li>
+                        <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Dropdown<i
+                                    class="material-icons right">arrow_drop_down</i></a></li>
+                    </ul>
                 </div>
             </div>
-        </div>
-    </div>
-
-
-</div>
-
-
-
+        </nav>
+    <!-- Dropdown Structure -->
+    <ul id="dropdown1" class="dropdown-content">
+        <li><a href="#!">one</a></li>
+        <li><a href="#!">two</a></li>
+        <li class="divider"></li>
+        <li><a href="#!">three</a></li>
+    </ul>
 
 
     <!--JavaScript at end of body for optimized loading-->
@@ -134,6 +53,10 @@
         //Parallax Effect
         const parallax = document.querySelectorAll('.parallax');
         M.Parallax.init(parallax, {});
+
+        //Drop Down
+        const dropdown = document.querySelectorAll('.dropdown-trigger');
+        M.Dropdown.init(dropdown, {});
     </script>
 </body>
 
