--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <title>Amity Institute of Information Technology</title>
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
@@ -12,26 +13,49 @@
 
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
 </head>
 
 <body>
 
-    <div class="navbar-fixed">
-        <div class="center logo-div">
-            <img src="assets/aiit-logo.png" alt="logo" class="logo">
-        </div>
-        <nav>
-            <div class="nav-wrapper blue-bg">
-                <div class="container">
-                    <ul class="left hide-on-med-and-down">
-                        <li><a href="sass.html">Sass</a></li>
-                        <li><a href="badges.html">Components</a></li>
-                        <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Dropdown<i
-                                    class="material-icons right">arrow_drop_down</i></a></li>
-                    </ul>
-                </div>
+    <div class="center logo-div">
+        <img src="assets/aiit-logo.png" alt="logo" class="logo">
+    </div>
+    <nav>
+        <div class="nav-wrapper blue-bg">
+            <div class="container">
+                <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+                <ul class="left hide-on-med-and-down">
+                    <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">About AIIT<i
+                                class="material-icons right">arrow_drop_down</i></a></li>
+
+                    <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Academics<i
+                                class="material-icons right">arrow_drop_down</i></a></li>
+
+                    <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Research & Innovation<i
+                                class="material-icons right">arrow_drop_down</i></a></li>
+
+                    <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Training & Placement<i
+                                class="material-icons right">arrow_drop_down</i></a></li>
+
+                    <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Beyond Academics<i
+                                class="material-icons right">arrow_drop_down</i></a></li>
+
+                    <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Admission<i
+                                class="material-icons right">arrow_drop_down</i></a></li>
+
+
+                </ul>
             </div>
-        </nav>
+        </div>
+    </nav>
+    <!--Side Navigation-->
+    <ul class="sidenav" id="mobile-demo">
+        <li><a href="sass.html">Sass</a></li>
+        <li><a href="badges.html">Components</a></li>
+        <li><a href="collapsible.html">Javascript</a></li>
+        <li><a href="mobile.html">Mobile</a></li>
+    </ul>
     <!-- Dropdown Structure -->
     <ul id="dropdown1" class="dropdown-content">
         <li><a href="#!">one</a></li>
@@ -39,6 +63,178 @@
         <li class="divider"></li>
         <li><a href="#!">three</a></li>
     </ul>
+
+
+    <div class="parallax-container">
+        <div class="parallax"><img src="assets/bg11.jpg"></div>
+    </div>
+    <div class="section white">
+        <div class="row container">
+            <h4 class="header">Why AIIT?</h4>
+            <p class="grey-text text-darken-3 lighten-3">Amity Institute of Information Technology (AIIT), Noida, which
+                is the integral part of Amity University Uttar Pradesh, is a center of excellence for quality education
+                in Information Technology with special focus on emerging trends.</p>
+
+            <!--Features Starts Here-->
+            <div class="features">
+                <div class="row">
+                    <div class="col s4">
+                        <div class="row">
+                            <div class="col s4">
+                                <img src="assets/wifi.svg" alt="" class="symbol">
+                            </div>
+                            <div class="col s8">
+                                <span class="title">100%</span>
+                                <p>Wifi Campus</p>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="col s4">
+                        <div class="row">
+                            <div class="col s4">
+                                <img src="assets/24-hours.svg" alt="" class="symbol">
+                            </div>
+                            <div class="col s8">
+                                <span class="title">24X7</span>
+                                <p>Access to over 16,000 refered journals</p>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="col s4">
+                        <div class="row">
+                            <div class="col s4">
+                                <img src="assets/team.svg" alt="" class="symbol">
+                            </div>
+                            <div class="col s8">
+                                <span class="title">100%</span>
+                                <p>Placement Support</p>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+            <!--Features Ends Here-->
+
+            <div style="height: 30px"></div>
+
+            <!--Vission and Mission Starts Here-->
+            <div class="vission">
+                <h4 class="header center">AMITY UNIVERSITY VISION</h4>
+                <div class="col s12 padding-0">
+                    <div class="card-panel hoverable blue-bg z-depth-1">
+                        <div class="row valign-wrapper">
+
+                            <div class="col s12">
+                                <span class="white-text">
+                                    Building the nation and the society through providing total, integrated and
+                                    trans-cultural quality education and to be the global front runner in value
+                                    education and nurturing talent in which Modernity Blends with Tradition.
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                    <div style="height: 30px"></div>
+                </div>
+            </div>
+            
+            <!--Vission Ends Here-->
+
+            <!--Mission Starts Here-->
+            <div class="mission">
+                <h4 class="header center">AIIT MISSION</h4>
+                <div class="col s12 padding-0">
+                    <div class="card-panel hoverable white z-depth-1">
+                        <div class="row valign-wrapper">
+
+                            <div class="col s12">
+                                <span class="black-text">
+                                    <h5>To provide education at:</h5>
+                                    <ul>
+                                        <li>Under Graduate</li>
+                                        <li>Post Graduate</li>
+                                        <li>Doctoral</li>
+                                        <li>in the field of Computer Science and Applications and in the futuristic and
+                                            emerging areas of knowledge, Learning and research in the field of
+                                            Information Communication Technologies.</li>
+
+                                    </ul>
+                                    <h5>To develop the overall personality of students by making them not only
+                                        excellent Computing professionals and technocrats but also:</h5>
+                                    <ul>
+                                        <li>Good individuals</li>
+                                        <li>Understanding and regards of human values</li>
+                                        <li>Pride in their heritage and culture</li>
+                                        <li>A sense of right and wrong</li>
+                                        <li>Yearning of perfection and imbibe attributes of courage of conviction and
+                                            action.</li>
+                                    </ul>
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                    <div style="height: 30px"></div>
+                </div>
+            </div>
+            <!--Mission Ends Here-->
+
+
+            <!--Recognitions & Accreditations Starts Here-->
+            <div class="recognition">
+                <h4 class="header center">Recognitions & Accreditations</h4>
+                <h5 class="center">Asia’s Only Not-for-profit University To Get US Regional Accreditation</h5>
+                <br>
+                <hr>
+                <img src="/assets/15-Recognitions_03.png" alt="w3c" class="wasc">
+                <hr>
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+
+
+
+
+    <!--FOoter Starts Here-->
+
+    <footer class="page-footer blue-bg">
+        <div class="container">
+            <div class="row">
+                <div class="col l6 s12">
+                    <h5 class="white-text">Footer Content</h5>
+                    <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer
+                        content.</p>
+                </div>
+                <div class="col l4 offset-l2 s12">
+                    <h5 class="white-text">Links</h5>
+                    <ul>
+                        <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
+                        <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
+                        <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
+                        <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="footer-copyright">
+            <div class="container">
+                © 2014 Copyright Text
+                <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+            </div>
+        </div>
+    </footer>
+
+
+
+
+
+
 
 
     <!--JavaScript at end of body for optimized loading-->
@@ -57,6 +253,13 @@
         //Drop Down
         const dropdown = document.querySelectorAll('.dropdown-trigger');
         M.Dropdown.init(dropdown, {});
+
+        //Carousel
+        const carousel = document.querySelectorAll('.carousel');
+        M.Carousel.init(carousel, {
+            fullWidth: true,
+            indicators: true,
+        })
     </script>
 </body>
 
