--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
                     <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Beyond Academics<i
                                 class="material-icons right">arrow_drop_down</i></a></li>
 
-                    <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Admission<i
-                                class="material-icons right">arrow_drop_down</i></a></li>
+                    <li><a>Alumin</a></li>
 
 
                 </ul>
@@ -51,10 +50,10 @@
     </nav>
     <!--Side Navigation-->
     <ul class="sidenav" id="mobile-demo">
-        <li><a href="sass.html">Sass</a></li>
-        <li><a href="badges.html">Components</a></li>
-        <li><a href="collapsible.html">Javascript</a></li>
-        <li><a href="mobile.html">Mobile</a></li>
+        <li><a href="#">About AIIT</a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
     </ul>
     <!-- Dropdown Structure -->
     <ul id="dropdown1" class="dropdown-content">
@@ -66,9 +65,13 @@
 
 
     <div class="parallax-container">
-        <div class="parallax"><img src="assets/bg11.jpg"></div>
+        <div class="parallax"><img src="assets/background1.jpg"></div>
     </div>
-    <div class="section white">
+    <a href="#aiit">
+        <div class="explore"><span>EXPLORE AIIT</span></div>
+    </a>
+
+    <div class="section white" id="aiit">
         <div class="row container">
             <h4 class="header">Why AIIT?</h4>
             <p class="grey-text text-darken-3 lighten-3">Amity Institute of Information Technology (AIIT), Noida, which
@@ -139,7 +142,7 @@
                     <div style="height: 30px"></div>
                 </div>
             </div>
-            
+
             <!--Vission Ends Here-->
 
             <!--Mission Starts Here-->
@@ -184,11 +187,120 @@
             <!--Recognitions & Accreditations Starts Here-->
             <div class="recognition">
                 <h4 class="header center">Recognitions & Accreditations</h4>
-                <h5 class="center">Asia’s Only Not-for-profit University To Get US Regional Accreditation</h5>
+                <h5 class="center">Asia’s Only Not-for-profit University To Get U.S.A Regional Accreditation</h5>
                 <br>
                 <hr>
                 <img src="/assets/15-Recognitions_03.png" alt="w3c" class="wasc">
                 <hr>
+                <br>
+                <div class="center-align">
+                    <a class="waves-effect btn-color waves-light btn"
+                        href="https://www.amity.edu/about-recognition.aspx">View All Recognitions</a>
+                </div>
+            </div>
+            <div style="height: 30px"></div>
+            <!--Recognitions & Accreditations Ends Here-->
+
+            <!--Leadership Starts Here-->
+            <div class="leadership">
+                <h4 class="header center">Leadership</h4>
+                <div style="height: 20px"></div>
+                <div class="row">
+                    <div class="col s3">
+                        <div class="row">
+                            <div class="col s12">
+                                <div class="card">
+                                    <div class="card-image">
+                                        <img src="assets/ashok.jpg">
+                                        <span class="card-title">Dr. ASHOK K CHAUHAN</span>
+                                    </div>
+                                    <div class="card-content">
+                                        <p>President, Amity Institute of Information Technology
+                                            <br>
+                                            Founder President, RBEF
+                                            Ritnanad Balved Education Foundation (RBEF)
+                                            <br>
+                                            (The Foundation of Amity Institutions and the sponsoring body of Amity
+                                            Universities)
+                                        </p>
+                                    </div>
+                                    <div class="card-action">
+                                        <a href="#">Read More</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col s3">
+                        <div class="row">
+                            <div class="col s12">
+                                <div class="card">
+                                    <div class="card-image">
+                                        <img src="assets/atul.jpg">
+                                        <span class="card-title">Dr. ATUL CHAUHAN</span>
+                                    </div>
+                                    <div class="card-content">
+                                        <p>Chancellor, Amity University, UP
+                                            <br>
+                                            President, RBEF
+                                            CEO, AKC Group of Companies
+                                        </p>
+                                    </div>
+                                    <div class="card-action">
+                                        <a href="#">Read More</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col s3">
+                        <div class="row">
+                            <div class="col s12">
+                                <div class="card">
+                                    <div class="card-image">
+                                        <img src="assets/balvinder.jpg">
+                                        <span class="card-title">Dr. BALVINDER SHUKLA</span>
+                                    </div>
+                                    <div class="card-content">
+                                        <p>Vice Chancellor, Amity University Uttar Pradesh, India
+                                        </p>
+                                    </div>
+                                    <div class="card-action">
+                                        <a href="#">Read More</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col s3">
+                        <div class="row">
+                            <div class="col s12">
+                                <div class="card">
+                                    <div class="card-image">
+                                        <img src="assets/ajay.jpg">
+                                        <span class="card-title">Dr. AJAY RANA</span>
+                                    </div>
+                                    <div class="card-content">
+                                        <p>Director , Amity Institute of Information Technology
+                                            Professor, Computer Science & Engineering
+                                            <br>
+                                            Advisor, Amity Higher Education Group
+                                            <br>
+                                            Senior Vice President
+                                            <br>
+                                            Dean , Industry Academic Alliance
+                                        </p>
+                                    </div>
+                                    <div class="card-action">
+                                        <a href="#">Read More</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
             </div>
         </div>
     </div>
