--- a/index.html
+++ b/index.html
@@ -318,26 +318,47 @@
     <footer class="page-footer blue-bg">
         <div class="container">
             <div class="row">
-                <div class="col l6 s12">
-                    <h5 class="white-text">Footer Content</h5>
-                    <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer
-                        content.</p>
+                <div class="col s5">
+                    <h5 class="white-text">Contact us</h5>
+                    <div class="row">
+                        <div class="col s6">
+                            <a class="grey-text text-lighten-3" href="#!">I-1 Block, 3rd Floor,
+                                Amity University Uttar Pradesh,
+                                Sector-125, Noida-201303</a><br>
+
+                        </div>
+                        <div class="col s6">
+                            <a class="grey-text text-lighten-3" href="#!">Helpline:0120- 4392277/ 4392294</a>
+                        </div>
+                    </div>
+
                 </div>
-                <div class="col l4 offset-l2 s12">
-                    <h5 class="white-text">Links</h5>
-                    <ul>
-                        <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-                        <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-                        <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-                        <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
-                    </ul>
+                <div class="col s3">
+                    <h5 class="white-text">Follow us</h5>
+                    <a href="https://www.facebook.com/AIITNoida"><img src="assets/icons/facebook-box.png"
+                            class="social-icon"></a>
+                    <a href="#"><img src="assets/icons/instagram.png"
+                            class="social-icon"></a>
+                    <a href="https://twitter.com/AiitNoida"><img src="assets/icons/twitter-box.png"
+                            class="social-icon"></a>
+
                 </div>
+                <div class="col s4">
+                    <h5 class="white-text">Reach us</h5>
+                    <div class="mapouter">
+                        <div class="gmap_canvas"><iframe width="100%" height="250" id="gmap_canvas"
+                                src="https://maps.google.com/maps?q=Amity%20University&t=&z=13&ie=UTF8&iwloc=&output=embed"
+                                frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe></div>
+
+                    </div>
+                </div>
+
             </div>
         </div>
         <div class="footer-copyright">
-            <div class="container">
-                © 2014 Copyright Text
-                <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+            <div class="container center">
+                Amity University © 2019 Copyright
+
             </div>
         </div>
     </footer>
